<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ProfileFragment">

    <ImageView
        android:id="@+id/iwProfilePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/profile_picture"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tvUserFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/test_user"
        android:textColor="@color/text_color"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iwProfilePicture" />

    <TextView
        android:id="@+id/tvMembershipType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/free_member"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUserFullName" />

    <LinearLayout
        android:id="@+id/containerButtonMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintTop_toBottomOf="@id/tvMembershipType">

        <Button
            android:id="@+id/btGoPro"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/text_color"
            android:text="@string/go_pro"
            android:textAlignment="textStart"
            android:textColor="@color/background"
            android:textSize="14sp"
            app:icon="@drawable/ic_baseline_go_pro_24"
            app:iconTint="@color/background"
            app:rippleColor="@color/background" />

        <Button
            android:id="@+id/btFitnessData"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/text_color"
            android:text="@string/my_data"
            android:textAlignment="textStart"
            android:textColor="@color/background"
            android:textSize="14sp"
            app:icon="@drawable/ic_baseline_data_24"
            app:iconTint="@color/background"
            app:rippleColor="@color/background" />

        <Button
            android:id="@+id/btWorkoutOptions"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/text_color"
            android:text="@string/settings"
            android:textAlignment="textStart"
            android:textColor="@color/background"
            android:textSize="14sp"
            app:icon="@drawable/ic_baseline_settings_24"
            app:iconTint="@color/background"
            app:rippleColor="@color/background" />

        <Button
            android:id="@+id/btInviteFriend"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/text_color"
            android:text="@string/invite_a_friend"
            android:textAlignment="textStart"
            android:textColor="@color/background"
            android:textSize="14sp"
            app:icon="@drawable/ic_baseline_invite_friend_24"
            app:iconTint="@color/background"
            app:rippleColor="@color/background" />

        <Button
            android:id="@+id/btLogOut"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/text_color"
            android:text="@string/log_out"
            android:textAlignment="textStart"
            android:textColor="@color/background"
            android:textSize="14sp"
            app:icon="@drawable/ic_baseline_logout_24"
            app:iconTint="@color/background"
            app:rippleColor="@color/background" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>