<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutLoginFormContainer"
        android:layout_width="0px"
        android:layout_height="0px"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/glBottom"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toEndOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/glTop">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfOutlinedTextFieldUsername"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/username"
            app:boxBackgroundColor="@color/text_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tfUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tfOutlinedTextFieldPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/password"
            app:boxBackgroundColor="@color/text_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tfPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btLogin"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/button_color"
            android:text="@string/log_in"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/layoutBottomInformationContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/tvSignUpPartOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/text_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:text="@string/sign_up"
                android:textColor="@color/text_color"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="50dp" />

</androidx.constraintlayout.widget.ConstraintLayout>